<resources>
    <string name="app_name">Teller Manager Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_custom_dialog">get dialog</string>
    <string name="number_plate">Number Plate</string>
    <string name="enter_amountCollected">amount Collected</string>
    <string name="no_of_passengers">no of passengers</string>
    <string name="enter_no_of_passengers">no of passengers</string>
    <string name="enter_rate">rate</string>
    <string name="enter_destination">destination</string>


</resources>
