<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:clickable="true"
    android:focusable="true">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dde6ec"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="#dde6ec"
            android:padding="10dp">

            <TextView
                android:id="@+id/number_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_plate"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/amountCollected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/number_plate"
                android:hint="@string/enter_amountCollected"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/no_of_passengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/amountCollected"
                android:hint="@string/enter_no_of_passengers"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/no_of_passengers"
                android:hint="@string/enter_rate"
                android:textColor="@android:color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/rate"
                android:hint="@string/enter_destination"
                android:textColor="@android:color/black"
                android:textSize="12dp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>